[package]
name = "ft_approval"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.1.0-pre.3", features = ["unstable"] }
near-contract-standards = "4.1.0-pre.3"

[dev-dependencies]
workspaces = { version = "0.6.0", features = ["unstable"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-units = "0.2"
base64 = "0.13"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
# remember to include a member for each contract
members = ["test-contract-defi"]
